fix dark mode bg

--- a/style.css
+++ b/style.css
@@ -12,20 +12,14 @@
     src: url('./fonts/SF-Pro-Display-Thin.otf') format("opentype");
 }
 
-/* Default variables */
-:root {
---blue-color: blue;
---green-color: green;
+[data-theme^="light"], 
+[data-theme] [data-theme^="light"] { 
+    background-color: #fff; 
 }
 
-[data-theme^="light"],
-[data-theme] [data-theme^="light"] {
-    background-color: #fff;
-}
-
-[data-theme^="dark"],
-[data-theme] [data-theme^="dark"] {
-    background-color: hsla(150, 50%, 50%, 0.2);
+[data-theme^="dark"], 
+[data-theme] [data-theme^="dark"] { 
+    background-color: #000; 
 }
 
 body {
